# learning-starlette

./: .dockerignore  Dockerfile  README.md  main.py  populate_data.py  pyproject.toml
app/: app.py  types.py
templates/: index.html
utils/: __init__.py
