[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Chad Catlett", email = "chad@catlett.info"},
]
dependencies = [
    "starlette==0.18.0",
    "uvicorn==0.17.5",
    "jinja2==3.0.3",
    "Authlib==0.15.5",
    "requests==2.27.1"]
requires-python = ">=3.10"
license = {text = "AGPL"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
